plugins {
    id 'java'
    id 'org.springframework.boot' version '2.7.12'
    id 'io.spring.dependency-management' version '1.0.15.RELEASE'
}

group = 'com.aurora.day'
version = '0.0.1'
sourceCompatibility = '1.8'

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    compileOnly 'org.projectlombok:lombok'
    runtimeOnly 'com.mysql:mysql-connector-j'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    implementation 'com.baomidou:mybatis-plus-boot-starter:3.5.3.1'
    implementation 'cn.hutool:hutool-all:5.8.18'
    implementation 'com.github.xiaoymin:knife4j-openapi3-spring-boot-starter:4.1.0'
    implementation 'org.springframework.boot:spring-boot-starter-validation:2.7.8'
    implementation 'org.apache.poi:poi-ooxml:5.2.3'//用于读取学校校历
}

tasks.named('test') {
    useJUnitPlatform()
}
